# speedy-geeko

./: README.md  config-feedforward.ini  config.ini  hello.py  main.py  model.py  pyproject.toml  retro.nix  rominfo.py  shell.nix  simple_random_mario.py  train.py  utils.py  watch.py  winner.pkl
