[project]
name = "speedy-geeko"
version = "0.1.0"
description = "An agent to play the yoshi island level in super mario world"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "gym-retro>=0.8.0",
    "neat-python>=0.92",
    "numpy>=1.24.4",
    "opencv-python>=4.8.1.78",
]

[tool.pyright]
enable = true
pythonVersion = "3.8"
venvPath = "."
venv = ".venv"
reportMissingImports = true

[tool.mypy]
python_version = "3.8"
mypy_path = ".venv/lib/python3.8/site-packages"
ignore_missing_imports = false

[tool.ruff.format]
quote-style = "single"
